<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AdministradorFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_solicitacao_visita"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_solicitacao_visita"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_orcamentos_pendentes"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_orcamentos_pendentes"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintBottom_toBottomOf="@+id/btn_solicitacao_visita"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_solicitacao_visita" />

            <Button
                android:id="@+id/btn_orcamentos_concluidos"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_orcamentos_concluidos"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintEnd_toEndOf="@+id/btn_solicitacao_visita"
                app:layout_constraintStart_toStartOf="@+id/btn_solicitacao_visita"
                app:layout_constraintTop_toBottomOf="@+id/btn_solicitacao_visita" />

            <Button
                android:id="@+id/btn_orcamentos_recusados"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_orcamentos_recusados"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintBottom_toBottomOf="@+id/btn_orcamentos_concluidos"
                app:layout_constraintEnd_toEndOf="@+id/btn_orcamentos_pendentes"
                app:layout_constraintTop_toTopOf="@+id/btn_orcamentos_concluidos" />

            <Button
                android:id="@+id/btn_em_analise"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_em_analise"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintEnd_toEndOf="@+id/btn_orcamentos_concluidos"
                app:layout_constraintStart_toStartOf="@+id/btn_orcamentos_concluidos"
                app:layout_constraintTop_toBottomOf="@+id/btn_orcamentos_concluidos" />

            <Button
                android:id="@+id/btn_admin_ordens_abertas"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_ordens_abertas"
                android:textColor="@color/cor_texto_botoes"
                app:layout_constraintEnd_toEndOf="@+id/btn_orcamentos_recusados"
                app:layout_constraintStart_toStartOf="@+id/btn_orcamentos_recusados"
                app:layout_constraintTop_toBottomOf="@+id/btn_orcamentos_recusados" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>